tests/checker/diagnostics/0848_polyvar_conditional_payload_mismatch_09.ml.infer.expected
File "0848_polyvar_conditional_payload_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0848_polyvar_conditional_payload_mismatch_09 is not a valid module name.

File "0848_polyvar_conditional_payload_mismatch_09.ml", line 5, characters 4-30:
5 |     (`A true : [ `A of bool ])
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type [ `A of bool ]
       but an expression was expected of type [ `A of int ]
       Types for tag `A are incompatible
